--- a/Invitation/src/main/webapp/html/chooseCharacter.html
+++ b/Invitation/src/main/webapp/html/chooseCharacter.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dopamine</title>
         <link rel="stylesheet" href="../resources/css/mainStyle.css">
         <link rel="stylesheet" href="../resources/css/chooseCharacter.css">
