크리스마스 별 수정

--- a/Invitation/src/main/webapp/html/christMas.html
+++ b/Invitation/src/main/webapp/html/christMas.html
@@ -15,7 +15,7 @@
 
     <script>
         const treeLines = [
-            '         ⭐',
+            '          ✯',
             '          *',
             '         ***',
             '        *****',
@@ -39,8 +39,8 @@
                     lineHTML += `<span class="leaf">*</span>`;
                 } else if (char === '|') {
                     lineHTML += `<span class="trunk">|</span>`;
-                } else if (char === '⭐') {
-                    lineHTML += `<span class="star-glow" style="color:#ff0">⭐</span>`;
+                } else if (char === '✯') {
+                    lineHTML += `<span class="star-glow" style="color:#ff0">✯</span>`;
                 } else {
                     lineHTML += char; // 공백, 다른 문자
                 }
