audio -> iframe 으로 수정

--- a/Invitation/src/main/webapp/html/christMas.html
+++ b/Invitation/src/main/webapp/html/christMas.html
@@ -8,8 +8,7 @@
 </head>
 <body>
  <div class="ground"></div>
-    <audio src="https://www.youtube.com/watch?v=1CYbySbtyF0&list=RD1CYbySbtyF0&start_radio=1" loop></audio>   
-
+    <iframe width="0" height="0" src="https://www.youtube.com/embed/1CYbySbtyF0?si=wMCw9jO2OGU36tKO" title="YouTube video player" frameborder="0" allow="autoplay" referrerpolicy="strict-origin-when-cross-origin"></iframe>
     <div class="container">
         <div class="tree" id="tree"></div>
     </div>
